# ImageProcessing

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt
CMake/: FindQt.cmake
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cc
